--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "checkout.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon checkout.js"
+    "dev": "nodemon checkout.js",
+    "start": "node checkout.js"
   },
   "author": "oyewole faith oluwadamilare",
   "license": "ISC",
